Use correct colorGroup for item text (backport r1186357)

BUG: 253022
FIXED-IN: 4.5.3

svn path=/branches/KDE/4.5/kdelibs/; revision=1186358